@@ -5,6 +5,7 @@ import com.oopsw.clario.domain.member.Member;
 import com.oopsw.clario.domain.member.MemberRepository;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
@@ -17,7 +18,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
-import java.util.List;
+import java.util.Map;
 
 @Slf4j
 @Component
@@ -25,11 +26,7 @@ import java.util.List;
 public class JwtAuthorizationFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
-    private final JwtProperties jwtProperties;
     private final MemberRepository memberRepository;
-
-    // 비활성 사용자 허용 URI 목록
-    private static final List<String> ALLOWED_INACTIVE_URIS = List.of("/api/member/join");
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -37,62 +34,80 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
                                     FilterChain filterChain) throws ServletException, IOException {
         log.info(">>> JwtAuthorizationFilter 진입: {}", request.getRequestURI());
 
-        String token = extractToken(request);
-        if (token == null || !jwtUtil.isValid(token)) {
-            log.warn("유효하지 않은 토큰 또는 Authorization 헤더 없음");
+        String token = extractTokenFromHeader(request);
+
+        if (token == null) {
+            log.warn("JWT 토큰이 Authorization 헤더에 없음");
             filterChain.doFilter(request, response);
             return;
         }
 
-        String email = jwtUtil.extractEmail(token);
+        log.info("추출된 토큰: {}", token);
+
+        if (!jwtUtil.validateToken(token)) {
+            log.warn("JWT 토큰이 유효하지 않음");
+            filterChain.doFilter(request, response);
+            return;
+        }
+
+        String email = jwtUtil.getUsername(token);
+        log.info("토큰에서 파싱한 이메일: {}", email);
+
         if (email == null) {
-            log.warn("토큰에서 이메일 파싱 실패");
+            log.warn("이메일 파싱 실패");
             filterChain.doFilter(request, response);
             return;
         }
 
         if (SecurityContextHolder.getContext().getAuthentication() != null) {
-            log.info("이미 인증된 요청");
+            log.info("이미 인증 객체 존재: {}", SecurityContextHolder.getContext().getAuthentication());
             filterChain.doFilter(request, response);
             return;
         }
 
         Member member = memberRepository.findByEmail(email).orElse(null);
+        log.info("DB에서 조회된 사용자: {}", member);
+
         if (member == null) {
-            log.warn("DB에서 사용자 조회 실패");
+            log.warn("이메일로 사용자 조회 실패");
             filterChain.doFilter(request, response);
             return;
         }
 
-        // 비활성 사용자는 특정 요청만 허용
-        if (!Boolean.TRUE.equals(member.getActivation()) &&
-                !ALLOWED_INACTIVE_URIS.contains(request.getRequestURI())) {
-            log.warn("비활성 사용자 접근 차단: {}", email);
+        if (!Boolean.TRUE.equals(member.getActivation())) {
+            if ("/api/member/join".equals(request.getRequestURI())) {
+                log.info("비활성화 사용자지만 /api/member/join 요청 → 인증 객체 설정");
+
+                CustomOAuth2User principal = new CustomOAuth2User(
+                        member.getName(),
+                        member.getEmail(),
+                        Collections.emptyMap(),
+                        Collections.singleton(() -> member.getRoleKey())
+                );
+
+                UsernamePasswordAuthenticationToken authToken =
+                        new UsernamePasswordAuthenticationToken(principal, null, principal.getAuthorities());
+
+                authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                SecurityContextHolder.getContext().setAuthentication(authToken);
+
+                log.info("인증 객체 설정 완료 (/join 예외처리)");
+                filterChain.doFilter(request, response);
+                return;
+            }
+
+            log.warn("비활성화 사용자 접근 차단");
             filterChain.doFilter(request, response);
             return;
         }
 
-        setAuthentication(request, member);
-        filterChain.doFilter(request, response);
-    }
+        String picture = jwtUtil.getClaim(token, "picture");
 
-    // prefix + header  JwtProperties 로부터 추출
-    private String extractToken(HttpServletRequest request) {
-        String header = request.getHeader(jwtProperties.getHeader()); // e.g. "Authorization"
-        String prefix = jwtProperties.getPrefix();                   // e.g. "Bearer"
-        if (header != null && header.startsWith(prefix + " ")) {
-            return header.substring((prefix + " ").length());
-        }
-        return null;
-    }
-
-
-    // 인증 설정 로직 함수로 추출하여 중복 제거
-    private void setAuthentication(HttpServletRequest request, Member member) {
+        // 활성화된 사용자 인증 객체 설정
         CustomOAuth2User principal = new CustomOAuth2User(
                 member.getName(),
                 member.getEmail(),
-                Collections.emptyMap(),
+                Map.of("picture", picture),
                 Collections.singleton(() -> member.getRoleKey())
         );
 
@@ -102,6 +117,17 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
         authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
         SecurityContextHolder.getContext().setAuthentication(authToken);
 
-        log.info("인증 객체 설정 완료: {}", member.getEmail());
+        log.info("인증 객체 설정 완료");
+        filterChain.doFilter(request, response);
     }
+
+    // Authorization 헤더에서 JWT 추출
+    private String extractTokenFromHeader(HttpServletRequest request) {
+        String header = request.getHeader("Authorization");
+        if (header != null && header.startsWith("Bearer ")) {
+            return header.substring(7);
+        }
+        return null;
+    }
+
 }
